<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tipcalculator.isaac.tipcalculator.SplitTip">

    <TextView android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/split_bill" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="80sp"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"/>
        <RadioButton android:id="@+id/radio_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </RadioGroup>

    <TextView android:id="@+id/people_text"
        android:layout_width="wrap_content"
        android:layout_height="60sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/people" />

    <NumberPicker android:id="@+id/people_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/people_text"
        android:layout_alignRight="@id/people_text"/>

    <RelativeLayout
        android:layout_alignParentLeft="true"
        android:layout_below="@id/people_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button android:id="@+id/back_button_split"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button android:id="@+id/next_button_split"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/next"
            android:layout_gravity="end" />

    </RelativeLayout>

</LinearLayout>
