<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">


    <TextView android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="100sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/home_title"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView android:id="@+id/billText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bill"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            />

        <NumberPicker android:id="@+id/billNumberPicker"
            android:layout_height="wrap_content"
            android:layout_width="80sp"
            android:layout_below="@id/billText"/>

        <NumberPicker android:id="@+id/centNumberPicker"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/billNumberPicker"
            android:layout_alignTop="@id/billNumberPicker"/>

        <NumberPicker android:id="@+id/tipNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/billNumberPicker"
            android:layout_alignParentRight="true"/>

        <TextView android:id="@+id/tipText"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/tip"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tipNumberPicker"
            android:layout_alignParentTop="true"/>

        <Button android:id="@+id/addbutton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80sp"
            android:layout_height="35sp"
            android:text="@string/add25"
            android:layout_below="@id/centNumberPicker"
            android:layout_alignRight="@id/centNumberPicker"/>

        <Button android:id="@+id/subbutton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80sp"
            android:layout_height="35sp"
            android:text="@string/sub25"
            android:layout_below="@id/billNumberPicker"
            android:layout_alignRight="@id/billNumberPicker"/>

        <Button android:id="@+id/next_button_main"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/tipNumberPicker"
            android:layout_alignStart="@+id/tipNumberPicker" />

        <Button android:id="@+id/pref_button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="Preferences"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

    </RelativeLayout>




</LinearLayout>
